<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/vector_drawable_stock_icon"
            android:title="@string/nav_stock" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/vector_drawable_data"
            android:title="@string/nav_data" />
        <item
            android:id="@+id/nav_tool"
            android:icon="@drawable/vector_drawable_account"
            android:title="@string/nav_tool" />
    </group>

    <item android:title="share">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

</menu>
